# interpretation-models

./: CHANGELOG.md  README.md  pyproject.toml
.github/agents/: mapper-developer.agent.md  schema-manager.agent.md
.github/skills/pyspark-schema-validation/: SKILL.md
.github/workflows/: lint-pr.yml  release.yml
docs/: bulk_data_models.md  database_model.md  dataflow.md  dataflows.md  design_interpretations.md  design_models.md  design_tables.md
docs/examples/: collection_activity_sample.json
notebooks/: surface_mapper_playground.ipynb
schemas/: Collection.json  CollectionActivity.json  CollectionItem.json  SurfaceGrid.json  SurfaceGrid_CollectionItem.json  surface_grids.json
src/interpretation_models/mappers/: README.md  __init__.py  helpers.py
src/interpretation_models/models/: README.md  __init__.py
src/interpretation_models/schemas/: __init__.py  registry.py
src/mappers/: README.md  __init__.py  collection_ow.py  helpers.py  mappers_dsis.py  metadata_ow.py  surface_helpers.py  surface_mappers.py  surfacegrid_ow.py
src/models/: README.md  __init__.py  collection.py  enums.py  extent.py  interpretation.py  metadata.py  origin.py  project.py  surface.py  surfacegrid.py  surfacegrid_eq_api.py  surfacegrid_sidv2.py
src/schemas/: __init__.py  registry.py
src/tables/: README.md  __init__.py  generate_schemas.py  model_to_table.py  schema_versioning.py  table_definitions.py  tablespec.py
tests/: conftest.py  test_collection_mapping.py  test_collection_ow.py  test_extent.py  test_metadata_mappers.py  test_surface.py  test_surfacegrid.py  test_surfacegrid_json_validation.py  test_surfacegrid_mapping.py
tests/data/: surfacegrid_ns_bs_regional.json  surfacegrid_volve_public.json
tests/mappers/: conftest.py  test_helpers.py
tests/schemas/: test_registry.py
(+40 files in other folders)
